trunk/test/fail/ac/principalwrongcred.app
//Error: principal credentials are not valid:

application test

section principal

entity User{
name :: String
}

principal is User with credentials nam